working in progress

--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
     padding-bottom: 10vh;
     font-family: "georgia";
     font-size: 1.5em;
-    background:#fdfefc;
+    /*background:#fdfefc;*/
   }
 
   header > div:nth-child(2) {
@@ -32,31 +32,6 @@
       <div><img src="images/logo.png" id="logo"></div> -->
     </header>
         <div class="thumbnails-container">
-          <div class="thumbnails-img-container">
-            <div class="img-container" id="ic-0">
-              <img class="thumbnail-img" id="tn-0" src="images/thumbnail-empty.jpg">
-            </div>
-          </div>
-          <div class="thumbnails-img-container">
-            <div class="img-container" id="ic-1">
-              <img class="thumbnail-img" id="tn-1" src="images/thumbnail-empty.jpg">
-            </div>
-          </div>
-          <div class="thumbnails-img-container">
-            <div class="img-container" id="ic-2">
-              <img class="thumbnail-img" id="tn-2" src="images/thumbnail-empty.jpg">
-            </div>
-          </div>
-          <div class="thumbnails-img-container">
-            <div class="img-container" id="ic-3">
-              <img class="thumbnail-img" id="tn-3" src="images/thumbnail-empty.jpg">
-            </div>
-          </div>
-          <div class="thumbnails-img-container">
-            <div class="img-container" id="ic-4">
-              <img class="thumbnail-img" id="tn-4" src="images/thumbnail-empty.jpg">
-            </div>
-          </div>
         </div>
         <div id="carousel">
         </div>
