--- a/app/index.html
+++ b/app/index.html
@@ -2,42 +2,23 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <title>roots</title>
-  <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
-  <script type="text/javascript" src="js/main.js"></script>
-  <script type="text/javascript" src="js/jquery.waterwheelCarousel.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Raleway:200,400" rel="stylesheet">
-  <link rel="stylesheet" href="css/main.css">
-  <style>
-  header {
-    display: flex;
-    padding-bottom: 10vh;
-    font-family: "georgia";
-    font-size: 1.5em;
-    /*background:#fdfefc;*/
-  }
-
-  header > div:nth-child(2) {
-    margin-left: auto;
-  }
-
-
-</style>
+  <title>login</title>
+  <style type="text/css">
+    html::after {
+      background-image: url("./images/login.jpg");
+      background-size: contain;
+      background-repeat: no-repeat;
+      content: "";
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      position: absolute;
+      z-index: -1; 
+    }
+  </style>
 </head>
 <body>
-
-  <div class="center">
-    <header>
-      <!-- <div>__________ <br><br> Tell us about art, <br> we'll tell you about wine</div>
-      <div><img src="images/logo.png" id="logo"></div> -->
-    </header>
-        <div class="thumbnails-container">
-        </div>
-        <div id="carousel">
-        </div>
-        <div class="submit-container">
-          <a id="submit" href="#">Submit</a>
-        </div>
-      </div>
-    </body>
-    </html>
+    <a href="survey.html" style="position:absolute;left:0px;right:0px;top:0px;bottom:0px;"></a>
+</body>
+</html>
