--- a/app/chart.html
+++ b/app/chart.html
@@ -7,19 +7,17 @@
     <script src="https://d3js.org/d3.v3.min.js"></script>
 	<script src="js/RadarChart.js"></script>
   <script id="myJSON" type="text/javascript" src="data/images.js"></script>
-  <script id="myJSON" type="text/javascript" src="data/wines.js"></script>
-
 
 	<style>
-  	body {
-		  /* overflow: hidden; */ /* when used scroll doesn't work */
-		  margin: 0;
-		  font-size: 0.9em;
-		  font-family: "georgia";
-      background-image: url("./images/white.jpg");
-      background-size: 100%;
-      background-repeat: no-repeat;
-		}
+  body {
+    /* overflow: hidden; */ /* when used scroll doesn't work */
+    margin: 0;
+    font-size: 0.9em;
+    font-family: "georgia";
+    background-image: url("./images/white.jpg");
+    background-size: 100%;
+    background-repeat: no-repeat;
+  }
 
 		#chart {
       padding-top: 12em;
@@ -28,52 +26,46 @@
       justify-content: center
     }
 
-    #content {
+    .button {
+      font-family: "georgia";
+      background: transparent;
+      border: 1px solid;
+      padding: 8px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 1em;
+      flex: 1 1 0;
+    }
+
+
+    .button#left {
+      margin-left: 15em;
+      margin-right: 3em;
+    }
+
+    .button#right {
+      margin-left: 3em;
+      margin-right: 15em;
+    }
+
+    #buttons {
       display: flex;
-      flex-direction: row;
       align-items: center;
       justify-content: center;
+      flex-wrap: nowrap;
     }
 
-    #recommendation-container {
-      padding: 1em;
-      margin: 1em;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      /* flex-wrap: wrap; */
-    }
-
-    #recommendation {
-      font-size: 0.9em;
-      /* padding: 1em; */
-      /* padding-top: 2em; */
-      /* flex: 1 1 0 */
-      /* padding: 1em; */
-      margin: 1em;
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: center;
-    }
-
-    #wineImg {
-      height: 6em;
-    }
-
-    #label-container {
-      font-weight: bold;
-      /* margin: 2em; */
-      padding: 2em;
-    }
 	</style>
   </head>
   <body>
+
     <div id="body">
-    <div id="content">
-	     <div id="chart"></div>
-       <div id="recommendation-container"></div>
+	  <div id="chart"></div>
     </div>
+    <div id="buttons">
+      <button class="button" id="left" onclick="location.href='index.html'" type="button">Review my picture selection</button>
+      <button class="button" id="right" onclick="location.href='recommendation.html'" type="button">Check out my wine recommendation</button>
     </div>
     <script>
 
@@ -171,93 +163,8 @@
 
     }
 
-    </script>
-
-    <script>
-    let recommendation = [];
-    if (wines)
-    {
-      for (let wine of wines.wines) {
-        let count = 0;
-        for (let image of wine.images) {
-          for (let s of selection) {
-            if (image === s) {
-              count++;
-            }
-          }
-        }
-        if (count > 1) {
-          recommendation.push(wine);
-        }
-      }
-    }
-
-    console.log(recommendation);
-
-    fillRecommendationHTML = (recommendation) => {
-      const container = document.getElementById('recommendation-container');
-      const div = document.getElementById('recommendation');
-      recommendation.forEach(wine => {
-        container.appendChild(createRecommendationHTML(wine));
-      });
-    }
-
-    createRecommendationHTML = (wine) => {
-      const reommendation_div = document.createElement('div');
-      reommendation_div.setAttribute('id', 'recommendation');
-
-      let img_id = -1;
-
-      console.log(wine.bottle_label);
-
-      if (wine.bottle_label === 'Francis Coppola') {
-          img_id = 3;
-      } else if (wine.bottle_label === 'Elouan') {
-        img_id = 1;
-      } else if (wine.bottle_label === "Stag's Leap") {
-        img_id = 2;
-      }
-
-      console.log(img_id);
-      if (img_id !== -1) {
-        const image = document.createElement('img');
-        image.setAttribute('src', `images/wine${img_id}.png`);
-        image.setAttribute('id', 'wineImg');
-        reommendation_div.appendChild(image);
-      }
-
-      const div = document.createElement('p');
-      div.setAttribute('id', 'label-container');
-
-      reommendation_div.appendChild(div);
-
-      div.innerHTML = `${wine.bottle_label} ${wine.bottle_name} ${wine.variety.variety_label} ${wine.bottle_year}`
-
-      // const label = document.createElement('p');
-      // label.innerHTML = wine.bottle_label;
-      // div.appendChild(label);
-      //
-      // const name = document.createElement('p');
-      // name.innerHTML = wine.bottle_name;
-      // div.appendChild(name);
-      //
-      // const vlabel = document.createElement('p');
-      // vlabel.innerHTML = wine.variety.variety_label;
-      // div.appendChild(vlabel);
-      //
-      // const year = document.createElement('p');
-      // year.innerHTML = wine.bottle_year;
-      // div.appendChild(year);
 
 
-      const tastingNotes = document.createElement('p');
-      tastingNotes.innerHTML = wine.tasting_notes;
-      reommendation_div.appendChild(tastingNotes);
-
-      return reommendation_div;
-    }
-
-    fillRecommendationHTML(recommendation);
     </script>
 
   </body>
