--- a/app/recommendation.html
+++ b/app/recommendation.html
@@ -38,18 +38,15 @@
     #recommendation-container {
       padding: 1em;
       margin: 1em;
+      margin-top: 6em;
       display: flex;
       align-items: center;
       justify-content: center;
-      /* flex-wrap: wrap; */
+      flex-direction: column;
     }
 
     #recommendation {
       font-size: 0.9em;
-      /* padding: 1em; */
-      /* padding-top: 2em; */
-      /* flex: 1 1 0 */
-      /* padding: 1em; */
       margin: 1em;
       display: flex;
       flex-direction: row;
@@ -58,13 +55,14 @@
     }
 
     #wineImg {
-      height: 6em;
+      height: 8em;
     }
 
     #label-container {
       font-weight: bold;
-      /* margin: 2em; */
       padding: 2em;
+      float: left;
+      white-space: nowrap;
     }
 	</style>
   </head>
@@ -211,7 +209,7 @@
       console.log(wine.bottle_label);
 
       if (wine.bottle_label === 'Francis Coppola') {
-          img_id = 3;
+        img_id = 3;
       } else if (wine.bottle_label === 'Elouan') {
         img_id = 1;
       } else if (wine.bottle_label === "Stag's Leap") {
@@ -219,40 +217,23 @@
       }
 
       console.log(img_id);
-      if (img_id !== -1) {
+      if (img_id === 1 || img_id === 2 || img_id === 3) {
         const image = document.createElement('img');
         image.setAttribute('src', `images/wine${img_id}.png`);
         image.setAttribute('id', 'wineImg');
         reommendation_div.appendChild(image);
+
+        const div = document.createElement('p');
+        div.setAttribute('id', 'label-container');
+
+        reommendation_div.appendChild(div);
+
+        div.innerHTML = `${wine.bottle_label}<br>${wine.bottle_name}<br>${wine.variety.variety_label}<br>${wine.bottle_year}`
+
+        const tastingNotes = document.createElement('p');
+        tastingNotes.innerHTML = wine.tasting_notes;
+        reommendation_div.appendChild(tastingNotes);
       }
-
-      const div = document.createElement('p');
-      div.setAttribute('id', 'label-container');
-
-      reommendation_div.appendChild(div);
-
-      div.innerHTML = `${wine.bottle_label} ${wine.bottle_name} ${wine.variety.variety_label} ${wine.bottle_year}`
-
-      // const label = document.createElement('p');
-      // label.innerHTML = wine.bottle_label;
-      // div.appendChild(label);
-      //
-      // const name = document.createElement('p');
-      // name.innerHTML = wine.bottle_name;
-      // div.appendChild(name);
-      //
-      // const vlabel = document.createElement('p');
-      // vlabel.innerHTML = wine.variety.variety_label;
-      // div.appendChild(vlabel);
-      //
-      // const year = document.createElement('p');
-      // year.innerHTML = wine.bottle_year;
-      // div.appendChild(year);
-
-
-      const tastingNotes = document.createElement('p');
-      tastingNotes.innerHTML = wine.tasting_notes;
-      reommendation_div.appendChild(tastingNotes);
 
       return reommendation_div;
     }
