--- a/app/result.html
+++ b/app/result.html
@@ -4,11 +4,13 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <link rel="stylesheet" href="css/result.css">
+  <link rel="stylesheet" href="css/multirange.css">
   <title>login</title>
   <!-- <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script> -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="js/multirange.js"></script>
 </head>
 <body>
   <div style="text-align: center;">
@@ -35,7 +37,7 @@
       </div>
     </div>
     <div class="col-12 bottom">
-     <div class= "col-12" style="height: 40vh; z-index: 0;">
+     <div class= "col-12" style="height: 30vh; z-index: 0;">
       <div class="container" style="margin-top: 5vh;">
         <div class="row">
           <div class="col-4 threetabs" id="food" style="font-size: 30pt">
@@ -47,12 +49,102 @@
           <div class="col-4 threetabs" id="price">
             PRICE
           </div>
+          <div class="col-12" id="foodcontent">
+            <div class="row">
+              <div class="col-3">
+                <label>
+                  <input type="radio" name="foodradio" value="small">
+                  <img src="http://placehold.it/150x100/0bf/fff&text=A">
+                </label>
+              </div>
+              <div class="col-3">
+                <label>
+                  <input type="radio" name="foodradio" value="small">
+                  <img src="http://placehold.it/150x100/b0f/fff&text=B">
+                </label>
+              </div>
+              <div class="col-3">
+                <label>
+                  <input type="radio" name="foodradio" value="small">
+                  <img src="http://placehold.it/150x100/f0b/fff&text=C">
+                </label>
+              </div>
+              <div class="col-3">
+                <label>
+                  <input type="radio" name="foodradio" value="small">
+                  <img src="http://placehold.it/150x100/222/fff&text=D">
+                </label>
+              </div>
+              <div class="col-3 subtitle">
+                fish
+              </div>
+              <div class="col-3 subtitle">
+                sauces
+              </div>
+              <div class="col-3 subtitle">
+                desert
+              </div>
+              <div class="col-3 subtitle">
+                meat
+              </div>
+            </div>
+          </div>
+          <div class="col-12" id="occasioncontent" style="display: none;">
+            <div class="row">
+              <div class="col-3">
+                <label>
+                  <input type="radio" name="occasionradio" value="small">
+                  <img src="http://placehold.it/150x100/0bf/fff&text=A">
+                </label>
+              </div>
+              <div class="col-3">
+                <label>
+                  <input type="radio" name="occasionradio" value="small">
+                  <img src="http://placehold.it/150x100/b0f/fff&text=B">
+                </label>
+              </div>
+              <div class="col-3">
+                <label>
+                  <input type="radio" name="occasionradio" value="small">
+                  <img src="http://placehold.it/150x100/f0b/fff&text=C">
+                </label>
+              </div>
+              <div class="col-3">
+                <label>
+                  <input type="radio" name="occasionradio" value="small">
+                  <img src="http://placehold.it/150x100/222/fff&text=D">
+                </label>
+              </div>
+              <div class="col-3 subtitle">
+                party
+              </div>
+              <div class="col-3 subtitle">
+                gift
+              </div>
+              <div class="col-3 subtitle">
+                formal event
+              </div>
+              <div class="col-3 subtitle">
+                family meeting
+              </div>
+            </div>
+          </div>
+          <div class="col-12" id="pricecontent" style="display: none;">
+            <div class="row">
+              <div class="col-12">
+                <p>
+                  <input type="text" id="pricerange" readonly>
+                </p>
+                <input type="range" multiple value="10,80" id="slider" />
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-     </div>
-     <a id="submit" href="image.html">Submit</a>
-   </div>
- </div>
+    </div>
+    <a id="submit" href="image.html">Submit</a>
+  </div>
+</div>
 </div>
 <script type="text/javascript">
   $(".threetabs").click(function()
@@ -61,6 +153,24 @@
     $("#occasion").css("font-size","20pt");
     $("#price").css("font-size","20pt");
     $("#" + this.id).css("font-size","30pt");
+    if (this.id == "food")
+    {
+      $("#foodcontent").css("display","block");
+      $("#occasioncontent").css("display","none");
+      $("#pricecontent").css("display","none");
+    }
+    else if (this.id == "occasion")
+    {
+      $("#foodcontent").css("display","none");
+      $("#occasioncontent").css("display","block");
+      $("#pricecontent").css("display","none");
+    }
+    else if (this.id == "price")
+    {
+      $("#foodcontent").css("display","none");
+      $("#occasioncontent").css("display","none");
+      $("#pricecontent").css("display","block");
+    }
   });
 </script>
 
