added real icons to result.html needs resizing

--- a/app/result.html
+++ b/app/result.html
@@ -54,25 +54,25 @@
               <div class="col-3">
                 <label>
                   <input type="radio" name="foodradio" value="small">
-                  <img src="http://placehold.it/150x100/0bf/fff&text=A">
+                  <img src="./images/fish.png" height="100" width="159">
                 </label>
               </div>
               <div class="col-3">
                 <label>
                   <input type="radio" name="foodradio" value="small">
-                  <img src="http://placehold.it/150x100/b0f/fff&text=B">
+                  <img src="./images/sauces.png" height="100" width="116">
                 </label>
               </div>
               <div class="col-3">
                 <label>
                   <input type="radio" name="foodradio" value="small">
-                  <img src="http://placehold.it/150x100/f0b/fff&text=C">
+                  <img src="./images/dessert.png" height="126" width="100">
                 </label>
               </div>
               <div class="col-3">
                 <label>
                   <input type="radio" name="foodradio" value="small">
-                  <img src="http://placehold.it/150x100/222/fff&text=D">
+                  <img src="./images/meat.png" height="113" width="150">
                 </label>
               </div>
               <div class="col-3 subtitle">
@@ -82,7 +82,7 @@
                 sauces
               </div>
               <div class="col-3 subtitle">
-                desert
+                dessert
               </div>
               <div class="col-3 subtitle">
                 meat
@@ -94,25 +94,25 @@
               <div class="col-3">
                 <label>
                   <input type="radio" name="occasionradio" value="small">
-                  <img src="http://placehold.it/150x100/0bf/fff&text=A">
+                  <img src="./images/party.png" height="150" width="150">
                 </label>
               </div>
               <div class="col-3">
                 <label>
                   <input type="radio" name="occasionradio" value="small">
-                  <img src="http://placehold.it/150x100/b0f/fff&text=B">
+                  <img src="./images/gift.png" height="150" width="150">
                 </label>
               </div>
               <div class="col-3">
                 <label>
                   <input type="radio" name="occasionradio" value="small">
-                  <img src="http://placehold.it/150x100/f0b/fff&text=C">
+                  <img src="./images/formal.png" height="150" width="150">
                 </label>
               </div>
               <div class="col-3">
                 <label>
                   <input type="radio" name="occasionradio" value="small">
-                  <img src="http://placehold.it/150x100/222/fff&text=D">
+                  <img src="./images/family.png" height="150" width="150">
                 </label>
               </div>
               <div class="col-3 subtitle">
