--- a/app/image.html
+++ b/app/image.html
@@ -7,30 +7,19 @@
   <script type="text/javascript" src="js/main.js"></script>
   <script type="text/javascript" src="js/jquery.waterwheelCarousel.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Raleway:200,400" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/main.css">
-  <style>
-  header {
-    display: flex;
-    padding-bottom: 10vh;
-    font-family: "georgia";
-    font-size: 1.5em;
-    /*background:#fdfefc;*/
-  }
-
-  header > div:nth-child(2) {
-    margin-left: auto;
-  }
-
-
-</style>
+  <link rel="stylesheet" href="css/navbar.css">
 </head>
 <body>
 
   <div class="center">
-    <header>
-      <!-- <div>__________ <br><br> Tell us about art, <br> we'll tell you about wine</div>
-      <div><img src="images/logo.png" id="logo"></div> -->
-    </header>
+
+    <div class="topnav">
+      <div id="nav-item"><img src="./images/logorootsblack.svg" id="logo"></div>
+      <div id="nav-item">Your Wine Compass</div>
+      <div id="nav-item"><a href="#"><i class="fa fa-search"></i></a><a href="#"><i class="fa fa-user"></i></a></div>
+    </div>
         <div class="thumbnails-container">
         </div>
         <div id="carousel">
