--- a/app/index.html
+++ b/app/index.html
@@ -2,15 +2,15 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <title>login</title>
+  <title>signup</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/navbar.css">
   <style type="text/css">
     html::after {
       background-image: url("./images/backgrounds-06.jpg");
       background-size: contain;
       /* background-repeat: no-repeat; */
       content: "";
-      /* margin-top: 130px; */
       top: 0;
       left: 0;
       bottom: 0;
@@ -19,43 +19,6 @@
       z-index: -1;
     }
 
-    body {
-      margin: 0;
-    }
-
-    #logo {
-      width: 2em;
-      padding: 1.5em;
-    }
-
-    h1 {
-      font-family: "Georgia";
-    }
-    /* Add a black background color to the top navigation */
-    .topnav {
-        height: 7em;
-        display: flex;
-        flex-direction: row;
-        background-color: #F2F2F2;
-        overflow: hidden;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    /* Style the links inside the navigation bar */
-    .topnav a {
-        color: grey;
-        text-align: center;
-        padding: 1em 1em;
-        text-decoration: none;
-        font-size: 1.1em;
-    }
-
-    /* Change the color of links on hover */
-    .topnav a:hover {
-        background-color: #ddd;
-        color: black;
-    }
 
     input[type=text] {
       background: transparent;
@@ -98,7 +61,7 @@
 <body>
   <div class="topnav">
     <div id="nav-item"><img src="./images/logorootsblack.svg" id="logo"></div>
-    <div id="nav-item"><h1>Your Wine Compass</h1></div>
+    <div id="nav-item">Your Wine Compass</div>
     <div id="nav-item"><a href="#"><i class="fa fa-search"></i></a><a href="#"><i class="fa fa-user"></i></a></div>
   </div>
 
