--- a/app/survey.html
+++ b/app/survey.html
@@ -1,42 +1,38 @@
 <!doctype html>
 <html>
 <head>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <title>login</title>
+  <title>survey</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/navbar.css">
   <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
   <style type="text/css">
-  html::before {
-    background-image: url("./images/white.jpg");
-    background-size: contain;
-    background-repeat: no-repeat;
-    content: "";
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    position: absolute;
-    z-index: 0;
-  }
-/*  html::after {
+
+  html::after {
     background-image: url("./images/bg.jpg");
     background-size: contain;
+    /* background-repeat: no-repeat; */
     content: "";
-    opacity: 0.25;
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
     position: absolute;
-    z-index: -1; 
-  }*/
+    z-index: -1;
+  }
+
+  #logo {
+    width: 4em;
+  }
+
   .smavnir{
     font-family: 'Avenir Black', sans-serif;
     font-size: 20pt;
     font-weight: bold;
   }
   .empty{
-    height: 150px;
+    height: 100px;
   }
   .square1{
     border: solid 1px #3bdeb3;
@@ -82,6 +78,11 @@
 </style>
 </head>
 <body>
+  <div class="topnav">
+    <div id="nav-item"><img src="./images/logorootsblack.svg" id="logo"></div>
+    <div id="nav-item">Your Wine Compass</div>
+    <div id="nav-item"><a href="#"><i class="fa fa-search"></i></a><a href="#"><i class="fa fa-user"></i></a></div>
+  </div>
   <div style="text-align: center;">
     <div class="container">
     <div class="row">
@@ -137,7 +138,7 @@
         Let's find the rigth wine !
       </div>
       <div class="col-12" style="height: 30px">
-        
+
       </div>
       <div class="col-12">
         <a id="submit" href="result.html">Submit</a>
@@ -162,7 +163,7 @@
         event.target.classList.add("fill");
       });
     }
-        
+
     var list2 = document.getElementsByClassName('square2');
     for (var i = 0; i < list2.length; i++)
     {
