--- a/app/survey.html
+++ b/app/survey.html
@@ -135,7 +135,7 @@
       <div class="col-12 empty">
       </div>
       <div class="col-12" style="font-family: Georgia; font-size: 20pt; font-weight: bold;">
-        Let's find the rigth wine !
+        Let's find the right wine !
       </div>
       <div class="col-12" style="height: 30px">
 
