--- a/app/survey.html
+++ b/app/survey.html
@@ -11,7 +11,7 @@
 
   html::after {
     background-image: url("./images/bg.jpg");
-    background-size: contain;
+    background-size: cover;
     /* background-repeat: no-repeat; */
     content: "";
     top: 0;
