change all bg to cover

--- a/app/recommendation.html
+++ b/app/recommendation.html
@@ -19,6 +19,7 @@
   		  font-family: "georgia";
         background-image: url("./images/white.jpg");
         background-size: 100%;
+        background-size: cover;
         /* background-repeat: no-repeat; */
   		}
 
