--- a/app/chart.html
+++ b/app/chart.html
@@ -18,6 +18,7 @@
       font-family: "georgia";
       background-image: url("./images/white.jpg");
       background-size: 100%;
+      background-size: cover;
       /* background-repeat: no-repeat; */
     }
 
