--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
   <style type="text/css">
     html::after {
       background-image: url("./images/backgrounds-06.jpg");
-      background-size: contain;
+      background-size: cover;
       /* background-repeat: no-repeat; */
       content: "";
       top: 0;
