--- a/app/result.html
+++ b/app/result.html
@@ -21,7 +21,7 @@
 </head>
 <body>
   <div class="topnav">
-    <div id="nav-item"><img src="./images/logorootsblack.svg" id="logo"></div>
+    <div id="nav-item"><img src="./images/logorootsblack.svg" id="logo" href="#" style=""></div>
     <div id="nav-item">Your Wine Compass</div>
     <div id="nav-item"><a href="#"><i class="fa fa-search"></i></a><a href="#"><i class="fa fa-user"></i></a></div>
   </div>
@@ -67,25 +67,25 @@
               <div class="col-3">
                 <label>
                   <input type="radio" name="foodradio" value="small">
-                  <img src="./images/fish.png" height="120">
+                  <img src="./images/fish.png" height="80">
                 </label>
               </div>
               <div class="col-3">
                 <label>
                   <input type="radio" name="foodradio" value="small">
-                  <img src="./images/sauces.png" height="120">
+                  <img src="./images/sauces.png" height="80">
                 </label>
               </div>
               <div class="col-3">
                 <label>
                   <input type="radio" name="foodradio" value="small">
-                  <img src="./images/dessert.png" height="120">
+                  <img src="./images/dessert.png" height="80">
                 </label>
               </div>
               <div class="col-3">
                 <label>
                   <input type="radio" name="foodradio" value="small">
-                  <img src="./images/meat.png" height="120">
+                  <img src="./images/meat.png" height="80">
                 </label>
               </div>
               <div class="col-3 subtitle">
@@ -107,25 +107,25 @@
               <div class="col-3">
                 <label>
                   <input type="radio" name="occasionradio" value="small">
-                  <img src="./images/party.png" height="120">
+                  <img src="./images/party.png" height="80">
                 </label>
               </div>
               <div class="col-3">
                 <label>
                   <input type="radio" name="occasionradio" value="small">
-                  <img src="./images/gift.png" height="120">
+                  <img src="./images/gift.png" height="80">
                 </label>
               </div>
               <div class="col-3">
                 <label>
                   <input type="radio" name="occasionradio" value="small">
-                  <img src="./images/formal.png" height="120">
+                  <img src="./images/formal.png" height="80">
                 </label>
               </div>
               <div class="col-3">
                 <label>
                   <input type="radio" name="occasionradio" value="small">
-                  <img src="./images/family.png" height="120">
+                  <img src="./images/family.png" height="80">
                 </label>
               </div>
               <div class="col-3 subtitle">
