--- a/app/chart.html
+++ b/app/chart.html
@@ -4,6 +4,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
     <title>vinograph</title>
+    <link rel="shortcut icon" type="image/ico" href="images/favicon.ico"/>
     <script src="https://d3js.org/d3.v3.min.js"></script>
   	<script src="js/RadarChart.js"></script>
     <script id="myJSON" type="text/javascript" src="data/images.js"></script>
