--- a/app/image.html
+++ b/app/image.html
@@ -3,6 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <title>roots</title>
+  <link rel="shortcut icon" type="image/ico" href="images/favicon.ico"/>
   <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
   <script type="text/javascript" src="js/jquery.waterwheelCarousel.js"></script>
