fix background in index.html; lower chart in chart.html; fix alignment in recommendation.html

--- a/app/chart.html
+++ b/app/chart.html
@@ -24,7 +24,7 @@
     }
 
   		#chart {
-        padding-top: 12em;
+        padding-top: 5em;
         display: flex;
         align-items: center;
         justify-content: center
@@ -73,7 +73,7 @@
 	  <div id="chart"></div>
     </div>
     <div id="buttons">
-      <button class="button" id="left" onclick="location.href='index.html'" type="button">Review my picture selection</button>
+      <button class="button" id="left" onclick="location.href='image.html'" type="button">Review my picture selection</button>
       <button class="button" id="right" onclick="location.href='recommendation.html'" type="button">Check out my wine recommendation</button>
     </div>
     <script>
