--- a/app/index.html
+++ b/app/index.html
@@ -7,19 +7,15 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/navbar.css">
   <style type="text/css">
-    html::after {
-      background-image: url("./images/backgrounds-06.jpg");
-      background-size: cover;
-      /* background-repeat: no-repeat; */
-      content: "";
-      top: 0;
-      left: 0;
-      bottom: 0;
-      right: 0;
-      position: absolute;
-      z-index: -1;
-    }
 
+  body {
+    /* overflow: hidden; */ /* when used scroll doesn't work */
+    margin: 0;
+    font-size: 0.9em;
+    font-family: "georgia";
+    background-image: url("./images/backgrounds-06.jpg");
+    background-size: 100%;
+  }
 
     input[type=text] {
       background: transparent;
