add create account button

--- a/app/recommendation.html
+++ b/app/recommendation.html
@@ -244,7 +244,7 @@
       const createAccount_div = document.createElement('div');
       recommendation_div.appendChild(createAccount_div);
       const createAccount = document.createElement('div');
-      createAccount.innerHTML = `To access our special cellar, <a href="index.html">subscribe</a> to Roots Premium`;
+      createAccount.innerHTML = `<p>To access our special cellar, subscribe to Roots Premium</p><button id="button">Create an account</button>`;
       createAccount_div.appendChild(createAccount);
 
       container.appendChild(recommendation_div);
